# Backtester

./: ATR.cpp  CMakeLists.txt  Data.cpp  Data.h  DataHandler.cpp  DataHandler.h  Day.cpp  Day.h  Event.cpp  Event.h  ExecutionHandler.cpp  ExecutionHandler.h  Global.cpp  Global.h  Main.cpp  Main.h  Portfolio.cpp  Portfolio.h  Strategy.cpp  Strategy.h
